# finarkae-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.cursor/rules/: common.mdc
finarkae/: __init__.py  _version.py  main.py  update.py
finarkae/proxity/: cli.py  compile_remise_flux_pass_ops.py
scripts/: auto-bump.sh  bump_version.py
tests/: __init__.py  test_proxity.py
