[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finarkae-cli"
version = "0.1.0"
description = "CLI tools for finarkae"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich",
    "openpyxl",
    "xlrd",
    "pydantic",
    "pandas",
    "chardet",
    "schwifty>=2024.9.0",
    "xlsxwriter>=3.2.3",
]

[project.scripts]
finarkae = "finarkae.main:app"

[tool.hatch.build.targets.wheel]
packages = ["finarkae"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
] 
